Add password authentication with test user

--- a/accueil.html
+++ b/accueil.html
@@ -45,6 +45,19 @@
                         <li><a href="cours/planchers/formulaire.html">Formulaire</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle">Poteaux Mixtes <span class="arrow">▼</span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="cours/poteaux/chapitre1.html">1. Introduction</a></li>
+                        <li><a href="cours/poteaux/chapitre2.html">2. Sections</a></li>
+                        <li><a href="cours/poteaux/chapitre3.html">3. Caractéristiques</a></li>
+                        <li><a href="cours/poteaux/chapitre4.html">4. Flambement</a></li>
+                        <li><a href="cours/poteaux/chapitre5.html">5. Flexion Composée</a></li>
+                        <li><a href="cours/poteaux/chapitre6.html">6. Résistance Feu</a></li>
+                        <li><a href="cours/poteaux/calculateurs.html">Calculateurs</a></li>
+                        <li><a href="cours/poteaux/formulaire.html">Formulaire</a></li>
+                    </ul>
+                </li>
                 <li><a href="#" onclick="logout(); return false;" class="logout-btn">Déconnexion</a></li>
             </ul>
         </div>
@@ -125,6 +138,39 @@
                     </div>
 
                     <a href="cours/planchers/chapitre1.html" class="btn btn-primary">
+                        Commencer le cours →
+                    </a>
+                </div>
+
+                <!-- POTEAUX MIXTES -->
+                <div class="course-card">
+                    <div class="course-icon">🏛️</div>
+                    <h3>Poteaux Mixtes</h3>
+                    <p>Dimensionnement des poteaux mixtes acier-béton : flambement et flexion composée.</p>
+
+                    <div class="course-topics">
+                        <span class="topic">Résistance plastique</span>
+                        <span class="topic">Flambement</span>
+                        <span class="topic">Interaction M-N</span>
+                        <span class="topic">Résistance feu</span>
+                    </div>
+
+                    <div class="course-stats">
+                        <div class="stat">
+                            <span class="stat-value">6</span>
+                            <span class="stat-label">Chapitres</span>
+                        </div>
+                        <div class="stat">
+                            <span class="stat-value">4</span>
+                            <span class="stat-label">Calculateurs</span>
+                        </div>
+                        <div class="stat">
+                            <span class="stat-value">3</span>
+                            <span class="stat-label">Exercices</span>
+                        </div>
+                    </div>
+
+                    <a href="cours/poteaux/chapitre1.html" class="btn btn-primary">
                         Commencer le cours →
                     </a>
                 </div>
