--- a/index.html
+++ b/index.html
@@ -180,8 +180,15 @@
             </div>
 
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="votre.email@exemple.com" required>
+                <label for="email">Email <span style="font-weight: normal; color: #888;">(ou laisser vide si mot de
+                        passe)</span></label>
+                <input type="email" id="email" name="email" placeholder="votre.email@exemple.com">
+            </div>
+
+            <div class="form-group">
+                <label for="password">Mot de passe <span
+                        style="font-weight: normal; color: #888;">(optionnel)</span></label>
+                <input type="password" id="password" name="password" placeholder="Votre mot de passe">
             </div>
 
             <button type="submit" class="btn-login">Accéder au cours</button>
@@ -213,15 +220,24 @@
             const nom = document.getElementById('nom').value.trim();
             const prenom = document.getElementById('prenom').value.trim();
             const email = document.getElementById('email').value.trim().toLowerCase();
+            const password = document.getElementById('password').value;
 
-            if (validateAccess(email)) {
-                // Stocker la session
-                saveSession(nom, prenom, email);
+            // Vérifier d'abord l'authentification par mot de passe
+            if (password && validatePasswordLogin(nom, prenom, password)) {
+                saveSession(nom, prenom, nom + '@local');
                 window.location.href = 'accueil.html';
-            } else {
-                document.getElementById('errorMessage').classList.add('show');
+                return false;
             }
 
+            // Sinon vérifier par email
+            if (email && validateAccess(email)) {
+                saveSession(nom, prenom, email);
+                window.location.href = 'accueil.html';
+                return false;
+            }
+
+            // Afficher erreur
+            document.getElementById('errorMessage').classList.add('show');
             return false;
         }
     </script>
